k8s/base/prometheus/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hhb-prometheus
  labels:
    name: hhb-prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hhb-prometheus
  template:
    metadata:
      labels:
        name: hhb-prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: "100m"
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 128Mi
