k8s/base/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hhb-prometheus
  labels:
    name: hhb-prometheus
spec:
  type: ClusterIP
  selector:
    name: hhb-prometheus
  ports:
    - port: 9090
